infra/k8s/aisdata-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aisdata-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aisdata
  template:
    metadata:
      labels:
        app: aisdata
    spec:
      containers:
        - name: aisdata
          image: banker.azurecr.io/aisdata
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
      imagePullSecrets:
        - name: azurecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: aisdata-srv
spec:
  selector:
    app: aisdata
  ports:
    - name: aisdata
      protocol: TCP
      port: 3000
      targetPort: 3000
