infra/k8s/aisdata-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aisdata-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aisdata-mongo
  template:
    metadata:
      labels:
        app: aisdata-mongo
    spec:
      containers:
        - name: aisdata-mongo
          image: mongo
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: aisdata-mongo-srv
spec:
  selector:
    app: aisdata-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
